--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "http": "0.0.0",
     "http-errors": "^1.7.3",
     "pug": "^2.0.4",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
