--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
         "sourceType": "module"
     },
     "rules": {
-        "no-console": 0
+        "no-console": 0,
+        "max-len": [1, 110, 2]
     }
 }
